[project]
name = "m1-ds-stack"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "andrew martin", email = "agmartin@gmail.com" }
]
dependencies = [
    "pandas>=2.1.2",
    "scipy>=1.11.3",
    "matplotlib>=3.8.1",
    "scikit-learn>=1.3.2",
    "torch>=2.1.0",
    "ortools>=9.7.2996",
    "torchvision>=0.16.0",
    "torchtext>=0.16.0",
    "torchaudio>=2.1.0",
    "xgboost>=2.0.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
